feat: Integrate CiCaptain client and update release candidate service for build triggering