@@ -1,9 +1,17 @@
 package com.swadeshitech.prodhub.services.impl;
 
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
 
+import com.fasterxml.jackson.core.JsonProcessingException;
+import com.fasterxml.jackson.databind.JsonNode;
+import com.fasterxml.jackson.databind.ObjectMapper;
+import com.swadeshitech.prodhub.entity.Application;
+import com.swadeshitech.prodhub.entity.Metadata;
+import com.swadeshitech.prodhub.integration.cicaptain.config.CiCaptainClient;
+import com.swadeshitech.prodhub.integration.cicaptain.dto.BuildTriggerRequest;
+import com.swadeshitech.prodhub.integration.cicaptain.dto.BuildTriggerResponse;
+import com.swadeshitech.prodhub.utils.Base64Util;
+import lombok.RequiredArgsConstructor;
 import org.bson.types.ObjectId;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
@@ -22,9 +30,14 @@ import com.swadeshitech.prodhub.services.ReleaseCandidateService;
 import com.swadeshitech.prodhub.transaction.read.ReadTransactionService;
 import com.swadeshitech.prodhub.transaction.write.WriteTransactionService;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.util.StringUtils;
+import reactor.core.publisher.Mono;
+
+import javax.swing.text.html.Option;
 
 @Service
 @Slf4j
+@RequiredArgsConstructor
 public class ReleaseCandidateServiceImpl implements ReleaseCandidateService {
 
     @Autowired
@@ -32,6 +45,11 @@ public class ReleaseCandidateServiceImpl implements ReleaseCandidateService {
 
     @Autowired
     private ReadTransactionService readTransactionService;
+
+    @Autowired
+    private CiCaptainClient ciCaptainClient;
+
+    private final ObjectMapper objectMapper;
 
     @Override
     public ReleaseCandidateResponse createReleaseCandidate(ReleaseCandidateRequest request) {
@@ -41,14 +59,22 @@ public class ReleaseCandidateServiceImpl implements ReleaseCandidateService {
 
         User user = extractUserFromContext();
 
+        List<Application> applications = readTransactionService.findApplicationByFilters(Map.of("_id", new ObjectId(request.getServiceName())));
+        if(CollectionUtils.isEmpty(applications)) {
+            log.error("Failed to create release candidate, service not found {}", request.getServiceName());
+            throw new CustomException(ErrorCode.RELEASE_CANDIDATE_COULD_NOT_BE_CREATED);
+        }
+
         ReleaseCandidate releaseCandidate = new ReleaseCandidate();
-        releaseCandidate.setServiceName(request.getServiceName());
         releaseCandidate.setBuildProfile(request.getBuildProfile());
         releaseCandidate.setStatus(ReleaseCandidateStatus.CREATED);
         releaseCandidate.setInitiatedBy(user);
-        releaseCandidate.setCertifiedBy(null);
+        releaseCandidate.setMetaData(request.getMetadata());
+        releaseCandidate.setService(applications.getFirst());
 
-        writeTransactionService.saveReleaseCandidateToRepository(releaseCandidate);
+        releaseCandidate = writeTransactionService.saveReleaseCandidateToRepository(releaseCandidate);
+
+        triggerBuild(releaseCandidate);
 
         return buildResponse(releaseCandidate);
     }
@@ -147,9 +173,13 @@ public class ReleaseCandidateServiceImpl implements ReleaseCandidateService {
             initiatedBy = initiatedUser.getName() + " (" + initiatedUser.getEmailId() + ")";
         }
 
+        return getReleaseCandidateResponse(releaseCandidate, certifiedBy, initiatedBy);
+    }
+
+    private static ReleaseCandidateResponse getReleaseCandidateResponse(ReleaseCandidate releaseCandidate, String certifiedBy, String initiatedBy) {
         ReleaseCandidateResponse response = new ReleaseCandidateResponse();
         response.setId(releaseCandidate.getId());
-        response.setServiceName(releaseCandidate.getServiceName());
+        response.setServiceName(releaseCandidate.getService().getName());
         response.setBuildProfile(releaseCandidate.getBuildProfile());
         response.setStatus(releaseCandidate.getStatus());
         response.setCertifiedBy(certifiedBy);
@@ -178,6 +208,51 @@ public class ReleaseCandidateServiceImpl implements ReleaseCandidateService {
             log.error("User with UUID: {} not found", uuid);
             throw new CustomException(ErrorCode.USER_NOT_FOUND);
         }
-        return userOption.get(0);
+        return userOption.getFirst();
+    }
+
+    private void triggerBuild(ReleaseCandidate releaseCandidate) {
+
+        String providerId = "";
+        String jobName = releaseCandidate.getService().getName() + "-" + releaseCandidate.getBuildProfile();
+        JsonNode data = null;
+
+        if(StringUtils.hasText(releaseCandidate.getEphemeralEnvironmentName())) {
+            jobName += "-" + releaseCandidate.getEphemeralEnvironmentName();
+        } else {
+            Set<Metadata> metadataList = releaseCandidate.getService().getProfiles();
+            for(Metadata metadata : metadataList) {
+                if(metadata.getName().equals(releaseCandidate.getBuildProfile())) {
+                    try {
+                        String decodedData = Base64Util.convertToPlainText(metadata.getData());
+                        data = objectMapper.readTree(decodedData);
+                        providerId = data.path("buildProviderId").asText();
+                    } catch (JsonProcessingException e) {
+                        log.error("Fail to read metadata of profile {}", metadata.getName());
+                        throw new CustomException(ErrorCode.METADATA_PROFILE_INVALID_DATA);
+                    }
+                    break;
+                }
+            }
+        }
+
+        BuildTriggerRequest request = BuildTriggerRequest.builder()
+                .triggeredBy(releaseCandidate.getInitiatedBy().getName() + " (" + releaseCandidate.getInitiatedBy().getEmailId() + ")")
+                .parameters(Map.of(
+                        "BRANCH_NAME", data.path("branchName").asText(),
+                        "BASE_IMAGE", data.path("baseImage").asText(),
+                        "BUILD_COMMAND", data.path("buildCommand").asText(),
+                        "REPO_URL", "https://github.com/SwaDeshiTech/" + data.path("repo").asText(),
+                        "ARTIFACT_PATH", data.path("artifactPath").asText(),
+                        "JOB_TEMPLATE", "prodhub_build"
+                ))
+                .build();
+
+        Mono<BuildTriggerResponse> buildTriggerResponse = ciCaptainClient.triggerBuild(providerId, jobName, request);
+        BuildTriggerResponse response = buildTriggerResponse.blockOptional().get();
+        releaseCandidate.setStatus(ReleaseCandidateStatus.IN_PROGRESS);
+        releaseCandidate.setBuildRefId(response.data().buildId());
+
+        writeTransactionService.saveReleaseCandidateToRepository(releaseCandidate);
     }
 }
